--- a/main.yml
+++ b/main.yml
@@ -1,25 +1,25 @@
-- name: setup reverse proxy
+- name: Setup reverse proxy
   hosts: aws
-  become: yes
+  become: true
   vars_files:
     - secrets.yml
   tasks:
-    - name: update
-      ansible.builtin.yum: update_cache=yes
-    - name: install
+    - name: Update
+      ansible.builtin.yum:
+        update_cache: true
+    - name: Install
       ansible.builtin.yum:
         name: nginx
 
-- name: setup tunneling via ssh
+- name: Setup tunneling via ssh
   hosts: home
-  become: yes
   vars_files:
     - vars.yml
   vars:
     ansible_become_pass: "{{ home.become_password }}"
   tasks:
-    - name: copy key file
+    - name: Copy key file
       ansible.builtin.copy:
         src: ./files/ec2.pem
-        dest: ./.ssh/ec2-ansible.pem
+        dest: ./.ssh/ec2.pem
         mode: '400'
