--- a/files/reverse-tunnel.service
+++ b/files/reverse-tunnel.service
@@ -3,7 +3,7 @@ Description=Keeps a tunnel open
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/ssh -NT -o ExitOnForwardFailure=yes -o StrictHostKeyChecking=no -o "ServerAliveInterval 60" -o "ServerAliveCountMax 3" -p 22 ec2-user@home.felixscherz.me -R 0.0.0.0:8123:192.168.0.182:8123 -R 0.0.0.0:3000:192.168.0.182:8123 -R 0.0.0.0:21063:192.168.0.182:21063 -R 0.0.0.0:5353:192.168.0.182:5353 -R 0.0.0.0:21064:192.168.0.182:21064 -i /home/felix/.ssh/ec2.pem
+ExecStart=/usr/bin/ssh -NT -o ExitOnForwardFailure=yes -o StrictHostKeyChecking=no -o "ServerAliveInterval 60" -o "ServerAliveCountMax 3" -p 22 ec2-user@home.felixscherz.me -R 0.0.0.0:8123:192.168.0.182:8123 -R 0.0.0.0:3000:192.168.0.182:8123 -R 0.0.0.0:4000:127.0.0.1:8000 -R 0.0.0.0:21063:192.168.0.182:21063 -R 0.0.0.0:5353:192.168.0.182:5353 -R 0.0.0.0:21064:192.168.0.182:21064 -i /home/felix/.ssh/ec2.pem
 
 RestartSec=5
 Restart=always
