--- a/main.yml
+++ b/main.yml
@@ -63,7 +63,10 @@
           - home.felixscherz.me
           - -d
           - paperless.felixscherz.me
+          - -d
+          - grocy.felixscherz.me
           - -n
+          - --expand
           - --agree-tos
           - --email
           - felixwscherz@gmail.com
@@ -203,10 +206,9 @@
         state: started
   handlers:
     - name: Restart wireguard
-      ansible.builtin.shell: wg-quick down wg0; wg-quick up wg0
-      args:
-        executable: /bin/bash
-
+      ansible.builtin.systemd_service:
+        state: restarted
+        name: wg-quick@wg0
 
 - name: Start VPN client
   hosts: home
@@ -223,4 +225,4 @@
       ansible.builtin.systemd:
         name: wg-quick@wg0
         enabled: yes
-        state: started
+        state: restarted
