--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -116,4 +116,33 @@ http {
 
 
     }
+
+
+    server {
+        server_name mealie.felixscherz.me;
+        root /usr/share/nginx/html;
+
+        # Load configuration files for the default server block.
+        include /etc/nginx/default.d/*.conf;
+        client_max_body_size 100M;
+
+        location / {
+            proxy_pass http://10.0.0.8:9925;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+        }
+
+
+    }
 }
