--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -42,7 +42,7 @@ http {
         include /etc/nginx/default.d/*.conf;
 
         location / {
-            proxy_pass http://localhost:3000; # Forward traffic to port 3000
+            proxy_pass http://10.0.0.8:8123; # Forward traffic to Home Assistant via VPN
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -70,7 +70,7 @@ http {
         client_max_body_size 100M;
 
         location / {
-            proxy_pass http://localhost:4000; # Forward traffic to port 4000
+            proxy_pass http://10.0.0.8:8000; # Forward traffic to Paperless via VPN
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
