--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -29,6 +29,11 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=api:10m rate=5r/s;
+    limit_req_zone $binary_remote_addr zone=upload:10m rate=2r/s;
+
     # Load modular configuration files from the /etc/nginx/conf.d directory.
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
@@ -38,15 +43,30 @@ http {
         server_name home.felixscherz.me;
         root /usr/share/nginx/html;
 
+        # Security Headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Download-Options "noopen" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data:;" always;
+
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
         location / {
+            # Rate limiting
+            limit_req zone=general burst=20 nodelay;
+
             proxy_pass http://10.0.0.8:8123; # Forward traffic to Home Assistant via VPN
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -64,18 +84,45 @@ http {
     server {
         server_name paperless.felixscherz.me;
         root /usr/share/nginx/html;
+        client_max_body_size 100M;
+
+        # Security Headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Download-Options "noopen" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data:;" always;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
-        client_max_body_size 100M;
 
         location / {
+            # Rate limiting for general requests
+            limit_req zone=general burst=20 nodelay;
+
             proxy_pass http://10.0.0.8:8000; # Forward traffic to Paperless via VPN
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+        }
+
+        # Stricter rate limiting for document uploads
+        location ~ ^/api/(documents|consume) {
+            limit_req zone=upload burst=5 nodelay;
+
+            proxy_pass http://10.0.0.8:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         error_page 404 /404.html;
@@ -92,17 +139,32 @@ http {
     server {
         server_name grocy.felixscherz.me;
         root /usr/share/nginx/html;
+        client_max_body_size 100M;
+
+        # Security Headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Download-Options "noopen" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data:;" always;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
-        client_max_body_size 100M;
 
         location / {
+            # Rate limiting
+            limit_req zone=general burst=20 nodelay;
+
             proxy_pass http://10.0.0.8:9283;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
 
@@ -121,17 +183,32 @@ http {
     server {
         server_name mealie.felixscherz.me;
         root /usr/share/nginx/html;
+        client_max_body_size 100M;
+
+        # Security Headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Download-Options "noopen" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https:; font-src 'self' data:;" always;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
-        client_max_body_size 100M;
 
         location / {
+            # Rate limiting
+            limit_req zone=general burst=20 nodelay;
+
             proxy_pass http://10.0.0.8:9925;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
         }
 
