feat: update websocket configuration on nginx

--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -68,6 +68,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+
+            # WebSocket optimizations
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_buffer_size 4k;
         }
 
         error_page 404 /404.html;
@@ -111,6 +118,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+
+            # WebSocket optimizations
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_buffer_size 4k;
         }
 
         # Stricter rate limiting for document uploads
@@ -166,6 +180,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+
+            # WebSocket optimizations
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_buffer_size 4k;
         }
 
         error_page 404 /404.html;
@@ -210,6 +231,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+
+            # WebSocket optimizations
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_buffer_size 4k;
         }
 
         error_page 404 /404.html;
@@ -257,6 +285,13 @@ http {
             # Grafana-specific headers
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Server $host;
+
+            # WebSocket optimizations
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_buffer_size 4k;
         }
 
         # WebSocket support for live dashboards
@@ -269,6 +304,13 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # WebSocket optimizations
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_buffer_size 4k;
         }
 
         error_page 404 /404.html;
