--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -322,4 +322,57 @@ http {
         }
 
     }
+
+    server {
+        server_name opencode.felixscherz.me;
+        root /usr/share/nginx/html;
+        client_max_body_size 100M;
+
+        # SSL Client Certificate Authentication
+        ssl_client_certificate /etc/nginx/ssl/ca.crt;
+        ssl_verify_client on;
+        ssl_verify_depth 2;
+
+        # Security Headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Download-Options "noopen" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        # Load configuration files for the default server block.
+        include /etc/nginx/default.d/*.conf;
+
+        location / {
+            # Rate limiting
+            limit_req zone=general burst=20 nodelay;
+
+            proxy_pass http://10.0.0.8:4096;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+
+            # WebSocket optimizations
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_buffer_size 4k;
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+        }
+
+    }
 }
